--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 					<nav id="nav">
 						<ul class="links">
 							<li class="active"><a href="index.html">Home</a></li>
-							<li><a href="/devopstools.html">DevOps Tools</a></li>
-							<li><a href="/devopseng.html">Becoming a DevOps Engineer</a></li>
+							<li><a href="./devopstools.html">DevOps Tools</a></li>
+							<li><a href="./devopseng.html">Becoming a DevOps Engineer</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
