--- a/devopseng.html
+++ b/devopseng.html
@@ -96,7 +96,7 @@
 						<section class="split contact">
 							<section class="alt">
 								<h3>Address</h3>
-								<p>Addis Ababa, Ethiopia<br />
+								<p>Oslo, Norway<br />
 				                     </p>
 							</section>
 							<section>
